--- a/index.html
+++ b/index.html
@@ -14,41 +14,43 @@
 
 <body class="index-page">
     <header class="page-header">
+       <div class="page-header__wrapper">
         <div class="page-header__logo-wrap">
-            <a href="/" class="page-header__logo-link">Pink</a>
+            <a href="index.html" class="page-header__logo-link"><img class="page-header__logo" src="img/logo-1.svg"></a>
         </div>
         <div class="page-header__nav-wrap">
             <nav class="main-nav">
+                <a href="#" class="main-nav__toggle main-nav__toggle--close"><img class="main-nav__toggle-img" src="img/menu-burger.svg"></a>
                 <ul class="main-nav__list">
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Возможности</a></li>
                     <li><a href="#">Отзывы</a></li>
                     <li><a href="#">Стоимость</a></li>
                 </ul>
-                <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
             </nav>
         </div>
-    </header>
-    <section class="pink-promo">
-        <div class="pink-promo__wrapper">
-            <h1 class="pink-promo__header">Взгляните на жизнь иначе!</h1>
-            <img class="pink-promo__img" src="img/iphone-hand-1.png">
         </div>
-    </section>
+        <div class="header-promo__wrapper">
+            <h1 class="header-promo__header">Взгляните на жизнь иначе!</h1>
+            <img class="header-promo__img" src="img/iphone-hand-1.png">
+        </div>
+    </header>
     <section class="download">
         <div class="download__wrapper">
             <a href="#" class="download__btn">Скачать приложение</a>
             <div class="download__logos">
-                <img class="logos__apple-logo" src="img/" width="" height="" alt="">
-                <img class="logos__android-logo" src="img/" width="" height="" alt="">
-                <img class="logos__windows-logo" src="img/" width="" height="" alt="">
+                <img class="logos__apple-logo" src="img/apple-logo.svg" width="" height="" alt="">
+                <img class="logos__android-logo" src="img/android-logo.svg" width="" height="" alt="">
+                <img class="logos__windows-logo" src="img/microsoft-logo.svg" width="" height="" alt="">
             </div>
             <p class="download__text">Доступно для iPhone, iPad, Android, Windows phone, MacOS, Windows 8</p>
         </div>
     </section>
     <section class="reasons">
         <div class="reasons__inner">
-            <h1 class="reasons__header">Устали от серости мегаполиса? Нам есть что вам предложить!</h1>
+            <h1 class="reasons__header">Устали от серости мегаполиса?</h1>
+            <h1 class="reasons__header">Нам есть что вам предложить!</h1>
+            <div class="reasons__wrap">
             <article class="reasons__item">
                 <h2>Поднимает настроение</h2>
                 <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
@@ -61,7 +63,10 @@
                 <h2>Заводит новых друзей</h2>
                 <p>Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </article>
+            <div class="reasons__img">
             <img src="img/iphone-screen-1-3@1x.png" alt="Smile" width="142" height="251">
+                </div>
+            </div>
         </div>
     </section>
     <section class="reviews">
@@ -91,10 +96,7 @@
         <div class="price__table-wrap">
             <table class="price__table">
                 <tr>
-                    <td class="price__table-col-1">Стандарт</td>
-                </tr>
-                <tr>
-                    <td class="price__table-col-1">3,99 USD</td>
+                    <td class="price__table-col-1">Стандарт <br> 3,99 USD</td>
                 </tr>
                 <tr>
                     <td class="price__table-col-1">Розовый фильтр</td>
