--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         <div class="page-footer__inner">
             <div class="page-footer__contacts">
                 <h1 class="page-footer__contact-header">Остались вопросы? Свяжитесь с нами!</h1>
-            <p class="page-footer__contact-text">Звоните:
+            <p class="page-footer__contact-text">Звоните:<br>
                 <a href=tel:8(800)1000900 class="phone">
                     8(800) 1000 900</a></p>
             <p class="page-footer__contact-text">
-                Пишите:
+                Пишите: <br>
                 <a href="#" class="email">hello@pinkapp.ru</a>
                 </p>
-        <p class="page-footer__contact-text">Приезжайте в гости!
+        <p class="page-footer__contact-text">Приезжайте в гости! <br>
         <a href="#" class="adress">Санкт-Петербург, Невский проспект, д. 20</a>
             </div>
         </div>
