добавлены слайдеры и флаг Хит

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <article class="slider-reviews__item">
                     <h1 class="slider-reviews__header">Николай Петров</h1>
                     <div class="slider-reviews__text">"Это приложение перевернуло мой мир и позволило по новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
+                    <div class="slider-btn slider-btn__active"></div>
+                    <div class="slider-btn"></div>
+                    <div class="slider-btn"></div>
                 </article>
                 <article class="slider-reviews__item">
                     <h1 class="slider-reviews__header">2Николай Петров</h1>
@@ -96,7 +99,7 @@
         <div class="price__table-wrap">
             <table class="price__table">
                 <tr>
-                    <td class="price__table-col-1">Стандарт <br> 3,99 USD</td>
+                    <td class="price__table-col-1"><div class="price__flag" title="Хит">Хит</div>Стандарт <br> 3,99 USD</td>
                 </tr>
                 <tr>
                     <td class="price__table-col-1">Розовый фильтр</td>
@@ -108,13 +111,11 @@
                     <td class="price__table-col-1">Комментарии</td>
                 </tr>
             </table>
+            <div class="slider-btn "></div>
+                    <div class="slider-btn slider-btn__active"></div>
+                    <div class="slider-btn"></div>
         </div>
-        <div class="price__pagination">
-            <i></i>        
-            <i class="price__pagination-active"></i>
-                    <i></i>
-                    
-                </div>
+        
     </section>
 
     <footer class="page-footer">
