Сделаны стили таблицы и меню

--- a/index.html
+++ b/index.html
@@ -98,17 +98,25 @@
     <section class="price">
         <div class="price__table-wrap">
             <table class="price__table">
-                <tr>
-                    <td class="price__table-col-1"><div class="price__flag" title="Хит">Хит</div>Стандарт <br> 3,99 USD</td>
+                <tr class="price__table-row-1">
+                    <td class="price__table-col-1">База<br>1,99 USD</td>
+                    <td class="price__table-col-2"><div class="price__flag" title="Хит">Хит</div>Стандарт <br> 3,99 USD</td>
+                    <td class="price__table-col-3">Анлим<br>9,99 USD</td>
                 </tr>
-                <tr>
+                <tr class="price__table-row-2">
                     <td class="price__table-col-1">Розовый фильтр</td>
+                    <td class="price__table-col-2">Розовый фильтр</td>
+                    <td class="price__table-col-3">Розовый фильтр</td>
                 </tr>
-                <tr>
+                <tr class="price__table-row-3">
                     <td class="price__table-col-1">Смайлики</td>
+                    <td class="price__table-col-2">Смайлики</td>
+                    <td class="price__table-col-3">Смайлики</td>
                 </tr>
-                <tr>
+                <tr class="price__table-row-4">
                     <td class="price__table-col-1">Комментарии</td>
+                    <td class="price__table-col-2">Комментарии</td>
+                    <td class="price__table-col-3">Комментарии</td>
                 </tr>
             </table>
             <div class="slider-btn "></div>
