--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
     </section>
     <section class="reasons">
         <div class="reasons__inner">
-            <h1 class="reasons__header">Устали от серости мегаполиса?</h1>
-            <h1 class="reasons__header">Нам есть что вам предложить!</h1>
+           <div class="reasons__header">
+            <h1 class="reasons__header-1">Устали от серости мегаполиса?</h1>
+            <h1 class="reasons__header-2">Нам есть что вам предложить!</h1>
+            </div>
             <div class="reasons__wrap">
             <article class="reasons__item">
                 <h2>Поднимает настроение</h2>
@@ -143,6 +145,9 @@
         </div>
         <div class="page-footer__map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.7461291855213!2d30.318908315863613!3d59.93635466924521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f89dee259%3A0x35cdba9c7f3d2206!2sNevsky+pr.%2C+20%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1460727144221" width="320" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <svg class="page-footer__white-arrow">
+            <polygon points="0,0 320,0 320,10 160,50 0,10" fill="white"/>
+            </svg>
         </div>
     </footer>
 </body>
