--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport"
+content="width=device-width, initial-scale=1">
     <title>PINK</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -30,12 +31,13 @@
             </nav>
         </div>
         </div>
+    </header>
+        <div class="flex-container">
         <div class="header-promo__wrapper">
             <h1 class="header-promo__header">Взгляните на жизнь иначе!</h1>
             <img class="header-promo__img" src="img/iphone-hand-1.png">
         </div>
-    </header>
-    <section class="download">
+    <div class="download">
         <div class="download__wrapper">
             <a href="#" class="download__btn">Скачать приложение</a>
             <div class="download__logos">
@@ -45,7 +47,8 @@
             </div>
             <p class="download__text">Доступно для iPhone, iPad, Android, Windows phone, MacOS, Windows 8</p>
         </div>
-    </section>
+        </div>
+    </div>
     <section class="reasons">
         <div class="reasons__inner">
            <div class="reasons__header">
@@ -53,6 +56,7 @@
             <h1 class="reasons__header-2">Нам есть что вам предложить!</h1>
             </div>
             <div class="reasons__wrap">
+            <div>
             <article class="reasons__item">
                 <h2>Поднимает настроение</h2>
                 <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
@@ -65,9 +69,18 @@
                 <h2>Заводит новых друзей</h2>
                 <p>Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </article>
+                </div>
             <div class="reasons__img">
             <img src="img/iphone-screen-1-3@1x.png" alt="Smile" width="142" height="251">
                 </div>
+            </div>
+            <div class="effect">
+            <div class="effect__img"></div>
+            <div><h2>Эффект на 24 часа!</h2>
+            <p> Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
+            </p>
+              <a class="effect-link" href="#">Узнать больше об исследовании</a>
+              </div>
             </div>
         </div>
     </section>
